# Website

./: .gitignore  Procfile  characters.py  manage.py  package-lock.json  pyproject.toml  requirements.txt
website/: asgi.py  settings.py  urls.py
website.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
website/core/: views.py
website/core/settings/: defaults.py  development.py  production.py
website/core/templates/: base.html  chinese.html  cookie.html  credits.html  employment.html  home.html  online.html  projects.html  work experience.html
