[tool.poetry]
name = "website"
version = "0.1.0"
description = "personal website"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
