[tool.poetry]
name = "website"
version = "0.1.0"
description = "personal website"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "3.0.14"
uvicorn = "^0.11.5"
django-storages = "^1.9.1"
boto3 = "^1.13.24"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
